# hazakura-note

./: .gitignore  AGENTS.md  README.md  index.html  markdown-safe-editor-plan.md  package-lock.json  package.json  postv05_hazakura-note-memo.md
docs/: agent-workbench-boundary.md  authoring-feature-readiness.md  current-status.md  development-automation.md  development-prep.md  dmg-preview-checklist.md  mvp-scope.md  next-goals.md  product-brief.md  release-review-request.md  roadmap-v0.1-archived.md  roadmap.md  security-boundary.md  smoke-checklist.md  source-release-checklist.md
docs/releases/: 0.1.0-warning-expected-dmg-preview.md  0.1.0-warning-expected-dmg-preview.release.md  0.2.0-warning-expected-dmg-preview.release.md  0.3.0-warning-expected-dmg-preview.release.md  0.4.0-warning-expected-dmg-preview.release.md  0.5.0-warning-expected-dmg-preview.release.md
scripts/: build-warning-dmg-preview.sh
src/: App.tsx  locale.ts  markdown.ts  styles.css  tauri.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  lib.rs  main.rs  menu.rs  tests.rs  types.rs  util.rs
src/components/: AgentPaneShell.tsx  AgentTerminalView.tsx  DiffPane.tsx  DiffSelectionSlot.tsx  DiffSetupPane.tsx  EditorPane.tsx  Icons.tsx  ImagePreviewPane.tsx  OutlinePane.tsx  PreviewPane.tsx  PreviewUnavailablePane.tsx  RightPaneToggleControls.tsx  SakuraPetals.tsx  ScrollPositionHud.tsx  StartPanel.tsx  WorkspaceContextMenu.tsx  WorkspaceTree.tsx
