[package]
name = "hazakura-note"
version = "0.5.0"
description = "Markdown-safe editor prototype"
authors = ["Hazakura Lab"]
edition = "2021"

[lib]
name = "hazakura_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
